cmake_minimum_required(VERSION 3.5)

project(riscv_base_math)

INCLUDE_DIRECTORIES(${DSP}/Include)
add_library(riscv_base_math STATIC)

target_sources(riscv_base_math PRIVATE riscv_abs_f32.c)
target_sources(riscv_base_math PRIVATE riscv_abs_q15.c)
target_sources(riscv_base_math PRIVATE riscv_abs_q31.c)
target_sources(riscv_base_math PRIVATE riscv_abs_q7.c)
target_sources(riscv_base_math PRIVATE riscv_add_f32.c)
target_sources(riscv_base_math PRIVATE riscv_add_q15.c)
target_sources(riscv_base_math PRIVATE riscv_add_q31.c)
target_sources(riscv_base_math PRIVATE riscv_add_q7.c)
target_sources(riscv_base_math PRIVATE riscv_dot_prod_f32.c)
target_sources(riscv_base_math PRIVATE riscv_dot_prod_q15.c)
target_sources(riscv_base_math PRIVATE riscv_dot_prod_q31.c)
target_sources(riscv_base_math PRIVATE riscv_dot_prod_q7.c)
target_sources(riscv_base_math PRIVATE riscv_mult_f32.c)
target_sources(riscv_base_math PRIVATE riscv_mult_q15.c)
target_sources(riscv_base_math PRIVATE riscv_mult_q31.c)
target_sources(riscv_base_math PRIVATE riscv_mult_q7.c)
target_sources(riscv_base_math PRIVATE riscv_negate_f32.c)
target_sources(riscv_base_math PRIVATE riscv_negate_q15.c)
target_sources(riscv_base_math PRIVATE riscv_negate_q31.c)
target_sources(riscv_base_math PRIVATE riscv_negate_q7.c)
target_sources(riscv_base_math PRIVATE riscv_offset_f32.c)
target_sources(riscv_base_math PRIVATE riscv_offset_q15.c)
target_sources(riscv_base_math PRIVATE riscv_offset_q31.c)
target_sources(riscv_base_math PRIVATE riscv_offset_q7.c)
target_sources(riscv_base_math PRIVATE riscv_scale_f32.c)
target_sources(riscv_base_math PRIVATE riscv_scale_q15.c)
target_sources(riscv_base_math PRIVATE riscv_scale_q31.c)
target_sources(riscv_base_math PRIVATE riscv_scale_q7.c)
target_sources(riscv_base_math PRIVATE riscv_shift_q15.c)
target_sources(riscv_base_math PRIVATE riscv_shift_q31.c)
target_sources(riscv_base_math PRIVATE riscv_shift_q7.c)
target_sources(riscv_base_math PRIVATE riscv_sub_f32.c)
target_sources(riscv_base_math PRIVATE riscv_sub_q15.c)
target_sources(riscv_base_math PRIVATE riscv_sub_q31.c)
target_sources(riscv_base_math PRIVATE riscv_sub_q7.c)

