cmake_minimum_required(VERSION 3.5)

project(riscv_complex)

INCLUDE_DIRECTORIES(${DSP}/Include)
add_library(riscv_complex STATIC)

target_sources(riscv_complex PRIVATE riscv_cmplx_conj_f32.c)
target_sources(riscv_complex PRIVATE riscv_cmplx_conj_q15.c)
target_sources(riscv_complex PRIVATE riscv_cmplx_conj_q31.c)
target_sources(riscv_complex PRIVATE riscv_cmplx_dot_prod_f32.c)
target_sources(riscv_complex PRIVATE riscv_cmplx_dot_prod_q15.c)
target_sources(riscv_complex PRIVATE riscv_cmplx_dot_prod_q31.c)
target_sources(riscv_complex PRIVATE riscv_cmplx_mag_f32.c)
target_sources(riscv_complex PRIVATE riscv_cmplx_mag_q15.c)
target_sources(riscv_complex PRIVATE riscv_cmplx_mag_q31.c)
target_sources(riscv_complex PRIVATE riscv_cmplx_mag_squared_f32.c)
target_sources(riscv_complex PRIVATE riscv_cmplx_mag_squared_q15.c)
target_sources(riscv_complex PRIVATE riscv_cmplx_mag_squared_q31.c)
target_sources(riscv_complex PRIVATE riscv_cmplx_mult_cmplx_f32.c)
target_sources(riscv_complex PRIVATE riscv_cmplx_mult_cmplx_q15.c)
target_sources(riscv_complex PRIVATE riscv_cmplx_mult_cmplx_q31.c)
target_sources(riscv_complex PRIVATE riscv_cmplx_mult_real_f32.c)
target_sources(riscv_complex PRIVATE riscv_cmplx_mult_real_q15.c)
target_sources(riscv_complex PRIVATE riscv_cmplx_mult_real_q31.c)
