cmake_minimum_required(VERSION 3.5)

project(riscv_matrix)

INCLUDE_DIRECTORIES(${DSP}/Include)

add_library(riscv_matrix STATIC)

target_sources(riscv_matrix PRIVATE riscv_mat_add_f32.c)
target_sources(riscv_matrix PRIVATE riscv_mat_add_q15.c)
target_sources(riscv_matrix PRIVATE riscv_mat_add_q31.c)
target_sources(riscv_matrix PRIVATE riscv_mat_cmplx_mult_f32.c)
target_sources(riscv_matrix PRIVATE riscv_mat_cmplx_mult_q15.c)
target_sources(riscv_matrix PRIVATE riscv_mat_cmplx_mult_q31.c)
target_sources(riscv_matrix PRIVATE riscv_mat_init_f32.c)
target_sources(riscv_matrix PRIVATE riscv_mat_init_q15.c)
target_sources(riscv_matrix PRIVATE riscv_mat_init_q31.c)
target_sources(riscv_matrix PRIVATE riscv_mat_inverse_f32.c)
target_sources(riscv_matrix PRIVATE riscv_mat_inverse_f64.c)
target_sources(riscv_matrix PRIVATE riscv_mat_mult_f32.c)
target_sources(riscv_matrix PRIVATE riscv_mat_mult_fast_q15.c)
target_sources(riscv_matrix PRIVATE riscv_mat_mult_fast_q31.c)
target_sources(riscv_matrix PRIVATE riscv_mat_mult_q15.c)
target_sources(riscv_matrix PRIVATE riscv_mat_mult_q31.c)
target_sources(riscv_matrix PRIVATE riscv_mat_scale_f32.c)
target_sources(riscv_matrix PRIVATE riscv_mat_scale_q15.c)
target_sources(riscv_matrix PRIVATE riscv_mat_scale_q31.c)
target_sources(riscv_matrix PRIVATE riscv_mat_sub_f32.c)
target_sources(riscv_matrix PRIVATE riscv_mat_sub_q15.c)
target_sources(riscv_matrix PRIVATE riscv_mat_sub_q31.c)
target_sources(riscv_matrix PRIVATE riscv_mat_trans_f32.c)
target_sources(riscv_matrix PRIVATE riscv_mat_trans_q15.c)
target_sources(riscv_matrix PRIVATE riscv_mat_trans_q31.c)
