cmake_minimum_required(VERSION 3.5)

project(riscv_statistic)

INCLUDE_DIRECTORIES(${DSP}/Include)

add_library(riscv_statistic STATIC)

target_sources(riscv_statistic PRIVATE riscv_max_f32.c)
target_sources(riscv_statistic PRIVATE riscv_max_q15.c)
target_sources(riscv_statistic PRIVATE riscv_max_q31.c)
target_sources(riscv_statistic PRIVATE riscv_max_q7.c)
target_sources(riscv_statistic PRIVATE riscv_mean_f32.c)
target_sources(riscv_statistic PRIVATE riscv_mean_q15.c)
target_sources(riscv_statistic PRIVATE riscv_mean_q31.c)
target_sources(riscv_statistic PRIVATE riscv_mean_q7.c)
target_sources(riscv_statistic PRIVATE riscv_min_f32.c)
target_sources(riscv_statistic PRIVATE riscv_min_q15.c)
target_sources(riscv_statistic PRIVATE riscv_min_q31.c)
target_sources(riscv_statistic PRIVATE riscv_min_q7.c)
target_sources(riscv_statistic PRIVATE riscv_power_f32.c)
target_sources(riscv_statistic PRIVATE riscv_power_q15.c)
target_sources(riscv_statistic PRIVATE riscv_power_q31.c)
target_sources(riscv_statistic PRIVATE riscv_power_q7.c)
target_sources(riscv_statistic PRIVATE riscv_rms_f32.c)
target_sources(riscv_statistic PRIVATE riscv_rms_q15.c)
target_sources(riscv_statistic PRIVATE riscv_rms_q31.c)
target_sources(riscv_statistic PRIVATE riscv_std_f32.c)
target_sources(riscv_statistic PRIVATE riscv_std_q15.c)
target_sources(riscv_statistic PRIVATE riscv_std_q31.c)
target_sources(riscv_statistic PRIVATE riscv_var_f32.c)
target_sources(riscv_statistic PRIVATE riscv_var_q15.c)
target_sources(riscv_statistic PRIVATE riscv_var_q31.c)
